--- a/wpf_prototype/WpfPrototype/WpfPrototype/windows/MainWindow.xaml
+++ b/wpf_prototype/WpfPrototype/WpfPrototype/windows/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WpfPrototype.MainWindow"
+﻿<Window x:Class="WpfPrototype.windows.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
