--- a/wpf_prototype/WpfPrototype/WpfPrototype/Window1.xaml
+++ b/wpf_prototype/WpfPrototype/WpfPrototype/Window1.xaml
@@ -56,7 +56,7 @@
                         <RowDefinition Height="8*"></RowDefinition>
                     </Grid.RowDefinitions>
                     <StackPanel x:Name="templateStackPanel" Grid.Row="0" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.CanContentScroll="False"></StackPanel>
-                    <ListView x:Name="listViewTemplatesAndAttributes" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Background="Transparent" BorderThickness="0" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.CanContentScroll="False" MouseDoubleClick="ListViewTemplatesAndAttributes_MouseDoubleClick">
+                    <ListView x:Name="listViewTemplates" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Background="Transparent" BorderThickness="0" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.CanContentScroll="False" MouseDoubleClick="ListViewTemplatesAndAttributes_MouseDoubleClick">
                         <ListView.ItemTemplate>
                             <DataTemplate>
                                 <WrapPanel>
@@ -64,12 +64,6 @@
                                 </WrapPanel>
                             </DataTemplate>
                         </ListView.ItemTemplate>
-                        <!--<ListView.View>
-                            <GridView>
-                                <GridViewColumn Header="Id" DisplayMemberBinding="{Binding Id}"/>
-                                <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}"/>
-                            </GridView>
-                        </ListView.View>-->
                     </ListView>
                     <ListView Margin="10" Name="listViewAttributes" Grid.Row="2" Background="Transparent" BorderThickness="0" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.CanContentScroll="False" >
                         <ListView.ItemTemplate>
