--- a/wpf_prototype/WpfPrototype/WpfPrototype/Window1.xaml
+++ b/wpf_prototype/WpfPrototype/WpfPrototype/Window1.xaml
@@ -5,7 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfPrototype"
         mc:Ignorable="d"
-        Title="Window1" Height="450" Width="800">
+        Title="Window1" Height="450" Width="800"
+        WindowState = "Maximized" 
+        WindowStyle = "None">
     <Border Padding="5">
         <Grid>
             <Grid.RowDefinitions>
