--- a/wpf_prototype/WpfPrototype/DocumentManagementApp/Window1.xaml
+++ b/wpf_prototype/WpfPrototype/DocumentManagementApp/Window1.xaml
@@ -32,7 +32,7 @@
                             <RowDefinition Height="0*" x:Name="panel"></RowDefinition>
                         </Grid.RowDefinitions>
                         <Grid VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Row="0" Margin="20">
-                            <ListView ItemsSource="{Binding BindingTemplates}" x:Name="listViewTemplates" Background="Transparent" BorderThickness="0" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.CanContentScroll="False" MouseDoubleClick="ListViewTemplatesAndAttributes_MouseDoubleClick">
+                            <ListView ItemsSource="{Binding BindingTemplates}" x:Name="listViewTemplates" Background="Transparent" BorderThickness="0" ScrollViewer.CanContentScroll="False" MouseDoubleClick="ListViewTemplatesAndAttributes_MouseDoubleClick">
                                 <ListView.ItemTemplate>
                                     <DataTemplate>
                                         <WrapPanel>
