--- a/wpf_prototype/WpfPrototype/DocumentManagementApp/MainWindow.xaml
+++ b/wpf_prototype/WpfPrototype/DocumentManagementApp/MainWindow.xaml
@@ -48,8 +48,8 @@
                             <ListView.ItemTemplate>
                                 <DataTemplate>
                                     <WrapPanel>
-                                        <ComboBox Width="90" Margin="10,0,0,0" ItemsSource="{Binding FiltersTitle}" SelectedItem="{Binding FiltersTitle[0]}"/>
-                                        <ComboBox Width="50" Margin="10,0,0,0" ItemsSource="{Binding FiltersType}" SelectedItem="{Binding FiltersType[0]}"/>
+                                        <ComboBox x:Name="comboboxTitle" Width="90" Margin="10,0,0,0" ItemsSource="{Binding FiltersTitle}" SelectedItem="{Binding Path=Title,Mode=TwoWay}"/>
+                                        <ComboBox x:Name="comboboxType" Width="50" Margin="10,0,0,0" ItemsSource="{Binding FiltersType}" SelectedItem="{Binding Path=Type,Mode=TwoWay}"/>
                                         <TextBox x:Name="txtBoxFilterValue" Text="{Binding Value}" Width="90" Margin="10,0,0,0"></TextBox>
                                         <Button Content="Delete" FontWeight="Bold" Height="30" Width="70" HorizontalAlignment="Right" Margin="10,0,0,0" ></Button>
                                     </WrapPanel>
@@ -60,7 +60,7 @@
                 </Grid>
                 <DockPanel Grid.Row="2">
                     <Button x:Name="buttonAddNewFilter" Content="Add filter" DockPanel.Dock="Top" Height="30" Width="70"></Button>
-                    <Button x:Name="buttonApplyFilters" Content="Apply filters" DockPanel.Dock="Bottom" Height="30" Width="70"></Button>
+                    <Button x:Name="buttonApplyFilters" Content="Apply filters" DockPanel.Dock="Bottom" Height="30" Width="70" Click="buttonApplyFilters_Click" ></Button>
                 </DockPanel>
             </Grid>
         </Grid>
