Bug (not saving files after click on save) fixed, filter for amount done

--- a/wpf_prototype/WpfPrototype/DocumentManagementApp/Window1.xaml
+++ b/wpf_prototype/WpfPrototype/DocumentManagementApp/Window1.xaml
@@ -22,7 +22,7 @@
                     </Button>
                 </DockPanel>
                 <DockPanel DockPanel.Dock="Bottom" Height="30">
-                    <Button x:Name="buttonSave" Content="Confirm" Click="ButtonSave_Click"></Button>
+                    <Button x:Name="buttonSave" Content="Save" Click="ButtonSave_Click"></Button>
                 </DockPanel>
                 <DockPanel HorizontalAlignment="Center" LastChildFill="False">
                     <Grid>
