--- a/wpf_prototype/WpfPrototype/DocumentManagementApp/MainWindow.xaml
+++ b/wpf_prototype/WpfPrototype/DocumentManagementApp/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DocumentManagementApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="1000">
+        Title="Document Management Application" Height="600" Width="1000">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="1*"></RowDefinition>
