--- a/wpf_prototype/WpfPrototype/DocumentManagementApp/MainWindow.xaml
+++ b/wpf_prototype/WpfPrototype/DocumentManagementApp/MainWindow.xaml
@@ -29,7 +29,7 @@
                 <ColumnDefinition Width="1*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <Button x:Name="buttonFilter" Grid.Column="1" Click="ButtonFilter_Click">
-                <Image Source="/filter.png" x:Name="imgFilter"></Image>
+                <Image x:Name="imgFilter" Source="/filter.png"></Image>
             </Button>
         </Grid>
         <Grid Grid.Row="3">
@@ -70,7 +70,7 @@
                 <ColumnDefinition Width="98*"></ColumnDefinition>
                 <ColumnDefinition Width="1*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <ListView x:Name="PLCLV" Grid.Column="1" Margin="10" SelectionMode="Single" ScrollViewer.VerticalScrollBarVisibility="Visible" BorderThickness="0" ItemsSource="{Binding SettingsEntity.Templates}">
+            <ListView x:Name="PLCLV" Grid.Column="1" Margin="10" SelectionMode="Single" ScrollViewer.CanContentScroll="False" BorderThickness="0" ItemsSource="{Binding SettingsEntity.Templates}">
                 <ListView.ItemContainerStyle>
                     <Style TargetType="ListViewItem">
                         <Setter Property="IsHitTestVisible" Value="False"/>
